src/test/deca/syntax/invalid/created/class/cbrace_missing.deca
// Description :
//    decl class } manquant
//
// Resultats :
//		Syntaxe error

class A {

